--- a/vbcomunicacao/home/templates/home/home.html
+++ b/vbcomunicacao/home/templates/home/home.html
@@ -1,13 +1,13 @@
-<h1>Bem-vindo à VB Comunicação</h1>
 
-<p>Login realizado com sucesso!</p>
 
-<p>Ver notícias</p>
-<a href="{% url 'noticias' %}">
-    <button>Clique aqui</button>
-</a>
-<br><br>
-<a href="/logout/">
-    <button>Sair</button>
-</a>
+<h1>Bem-vindo ao Buscador de Notícias</h1>
 
+<p>Perfil: {{ perfil }}</p>
+
+<a href="/noticias/">Ver notícias</a><br><br>
+
+{% if perfil == 'admin' or perfil == 'reporter' %}
+    <a href="/noticias/cadastrar/">Cadastrar notícia</a><br><br>
+{% endif %}
+
+<a href="/logout/">Logout</a>
